<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CakeTube VPN Demo</string>
    <string name="log_in">LOGIN</string>
    <string name="log_out">LOGOUT</string>
    <string name="connect">CONNECT</string>
    <string name="disconnect">DISCONNECT</string>
    <string name="optimal_server">OPTIMAL SERVER</string>
    <string name="unknown">UNKNOWN</string>

    <string name="devices_exceed">Available device count is exceed. Please consider upgrading your subscription.</string>
    <string name="sessions_exceed">Available active session count is exceed. Please consider upgrading your subscription.</string>

    <string name="version">Version</string>
    <string name="app_error">Application error</string>
    <string name="no_data">No data</string>
    <string name="personal_information">Personal Information</string>
    <string name="account_type">Account Type</string>
    <string name="activated_devices">Activated Devices</string>
    <string name="account">Account</string>
    <string name="signin_error">Unable to sign in</string>
    <string name="no_network">Unable to connect to server. Check your Internet connection.</string>
    <string name="online_devices">Online Devices</string>
    <string name="please_wait">Please Wait</string>
    <string name="vpn_server_location">VPN Server Location</string>
    <string name="vpn_node">VPN Node</string>
    <string name="legal_information">Legal Information</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>

    <string name="logged_in">Logged in</string>
    <string name="logged_out">Logged out</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>

    <string name="host_url_title">Host Url: </string>
    <string name="carrier_id_title">Carrier ID: </string>
    <string name="oauth_access_token">Token: </string>
    <string name="oauth_access_method">Method: </string>
    <string name="confirm">CONFIRM</string>

    <string name="traffic_stats">UL: %1$s, DL: %2$s </string>
    <string name="traffic_limit">%1$s of %2$s available</string>
    <string name="traffic_unlimited">UNLIMITED</string>

    <string name="current_server">CURRENT_SERVER</string>

</resources>
